[package]
name = "vfnode"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A verifiable fair (VF) coinflip service using VRF"

[dependencies]
# Runtime & HTTP - Optimized for performance
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "timeout"] }
num_cpus = "1.16"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database & Storage
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "parsing", "formatting"] }

# Cryptography
curve25519-dalek = "4"
ed25519-dalek = { version = "2", features = ["std", "serde"] }
merlin = "3"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
thiserror = "1"
anyhow = "1"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true              # Link-time optimization
codegen-units = 1       # Better optimization
panic = "abort"         # Smaller binary
strip = true            # Remove debug symbols

[profile.dev]
opt-level = 1           # Some optimization in debug builds